update index.html to include body and Connect button

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <doctype html>
 <html>
-    Hi!
+    <body>        
+        <button id="ConnectButton">Connect</button>
+    </body>
 </html>
 </doctype>
