--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
-<doctype html>
-<html>
-    <body>        
-        <button id="ConnectButton">Connect</button>
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web3 Connect</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <div class="container">
+        <h1>🔗 Web3 Connection</h1>
+        <p>Connect your wallet to interact with the decentralized web</p>
+        <button id="ConnectButton">Connect Wallet</button>
+    </div>
+    <div class="footer">
+        <p>Secure • Decentralized • Web3</p>
+    </div>
+</body>
 </html>
-</doctype>
