feat: enhance UI with new buttons and input for coffee purchase in index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 </head>
 <body>
     <div class="container">
-        <h1>🔗 Web3 Connection</h1>
-        <p>Connect your wallet to interact with the decentralized web</p>
-        <button id="ConnectButton">Connect Wallet</button>
-        <button id="ExecuteButton">Execute</button>
+        <h1>☕ Web3 Coffee Shop</h1>
+        <p>Connect your wallet to interact</p>
+        <button id="connectButton">Connect Wallet</button>
+        <button id="executeButton">Get balance</button>
+        <label for="ethAmount">Eth amount</label>
+        <input id="ethAmount" placeholder="0.1" />
+        <button type="button" id="sendButton">Buy coffee</button>
     </div>
     <div class="footer">
         <p>Secure • Decentralized • Web3</p>
