--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
     </div>
 </body>
 
-<script src="src/js/index.js" type="module"></script>
+<script src="src/ts/index.ts" type="module"></script>
 </html>
